# BlockchainSimulator

./: CMakeLists.txt  README.md
docs/: Documentation.md
include/: Block.h  Blockchain.h  SmartContract.h  Transaction.h  VirtualMachine.h  WalletSystem.h
src/: Block.cpp  Blockchain.cpp  SmartContract.cpp  Transaction.cpp  VirtualMachine.cpp  WalletSystem.cpp  main.cpp
tests/: test.cpp
